--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.8",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.78.0"
   },
   "devDependencies": {
     "eslint": "^8",
