--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.21.3",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "next": "14.2.8",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
